# OGE_Telegram_Bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/variants/informatics/: 2026-09.yaml  2026-10.yaml
data/variants/mathematics/: 2026-09.yaml
migrations/: env.py
scripts/: parse_fipi.py  seed.py
src/ogebot/: __init__.py  __main__.py  bot.py  config.py  keyboards.py  logging.py  middlewares.py  states.py  texts.py
src/ogebot/db/: __init__.py  base.py  engine.py  models.py
src/ogebot/handlers/: __init__.py  admin.py  catalog.py  common.py  exam.py  start.py
src/ogebot/repositories/: __init__.py  attempts.py  catalog.py  users.py
src/ogebot/services/: __init__.py  exam.py  grading.py  loader.py
tests/: conftest.py  test_exam_flow.py  test_grading.py  test_loader.py
